--- a/processing_service/docker-compose.yml
+++ b/processing_service/docker-compose.yml
@@ -1,19 +1,4 @@
 services:
-  minio:
-    image: minio/minio:latest
-    container_name: arxiv-minio
-    command: server /data --console-address ":9001"
-    ports:
-      - "9000:9000"
-      - "9001:9001"
-    environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
-    volumes:
-      - minio_data:/data
-    networks:
-      - arxiv-shared
-
   processing_service:
     build: .
     container_name: processing_service
@@ -23,17 +8,34 @@ services:
       - path: .env
         required: false
     environment:
-      - S3_ENDPOINT=http://arxiv-minio:9000
+      - S3_ENDPOINT=http://minio:9000
       - AWS_ACCESS_KEY_ID=minioadmin
       - AWS_SECRET_ACCESS_KEY=minioadmin
       - AWS_REGION=us-east-1
     depends_on:
       - minio
-    networks:
-      - arxiv-shared
     volumes:
       - ./app:/app/app # Hot-reload
     command: uvicorn app.main:app --host 0.0.0.0 --port 8001 --reload
+    networks:
+      - arxiv-shared
+
+  minio:
+    image: minio/minio
+    container_name: arxiv_minio_silver
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin # pragma: allowlist secret
+    command: server /data --console-address ":9001"
+    volumes:
+      - minio_data:/data
+    networks:
+      arxiv-shared:
+        aliases:
+          - arxiv-minio
 
 volumes:
   minio_data:
